maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: not found: value trouveBscuit
  trouveBscuit()
  ^