maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  trouveBscuit()
}

def trouveBiscuit() 
{
  for (X <- 0 to (getMondeLargeur()-1))
  {
    for (Y <- 0 to (getMondeHauteur()-1))
    {
      if (aBiscuit(X,Y))
      {
        setIndication(X,Y,0)
      }
    }
  }
}

